package com.elmamma.src.model;

public enum StatutCommande {
    COMMANDE,
    EN_COURS,
    PRET
}
