package com.elmamma;

public class Cuisiniere {
    public void changerStatut() {
        System.out.println("   > [KITCHEN] Status: Preparing your meal...");
        System.out.println("   > [KITCHEN] Status: Ready for pickup!");
    }
}